# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml
gendiff/: __init__.py  diff_builder.py  parsers.py  utils.py
gendiff/formatters/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
hexlet_code.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_gendiff.py
